--- a/templates/index.html
+++ b/templates/index.html
@@ -51,8 +51,11 @@
           </div>
           <br>
             <div style="display: flex" id="equation-control">
-              <button id="equation-btn" style="margin-right: 1rem">
+              <button id="equation-btn" style="margin-right: 1rem" onclick="visualize()">
                 visualize
+              </button>
+              <button id="equation-btn" style="margin-right: 1rem" onclick="stop()">
+                stop
               </button>
             </div>
             <b id="placeholder"></b>
