Error message and logic fix

--- a/static/index.css
+++ b/static/index.css
@@ -34,9 +34,49 @@ main.container {
   flex-direction: column;
 }
 
-
 a {
   text-decoration: none;
+}
+
+#questionmark {
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black;
+}
+
+#questionmark .tooltip {
+  visibility: hidden;
+  width: 120px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  padding: 5px 0;
+  border-radius: 6px;
+  z-index: 1;
+  position: absolute;
+  bottom: 125%;
+  /*
+  left: 50%;
+  */
+  margin: 3px;
+  opacity: 0;
+  transition: opacity 0.6s;
+}
+
+#questionmark .tooltip::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
+
+#questionmark:hover .tooltip {
+  visibility: visible;
+  opacity: 1;
 }
 
 #canvas {
@@ -108,4 +148,9 @@ input[type='text']:focus {
     top: 20rem;
     -webkit-transform: scaleX(-1);
     transform: scaleX(-1);
+}
+
+
+#placeholder {
+  max-width: 300px;
 }
